Fixed gap again.

--- a/IntranetCSS/component.css
+++ b/IntranetCSS/component.css
@@ -2,7 +2,7 @@
 .ui-dark .bg-smoke { background-color: #282828; }
 
 .panel { background-color: #FFF; border-radius: var(--radius); border: 1px solid #E0E0E0; }
-.panel > .toolbar { float: right; margin: 10px 10px 0 10px; }
+.panel > .toolbar { float: right; margin: 10px var(--gap) 0 10px; }
 .panel > .toolbar button { height: 22px; line-height: 20px; min-width: 60px; }
 .panel > label { display: block; padding: 10px var(--gap); border-bottom: 1px solid #E0E0E0; font-size: 15px; color: #000; font-weight: bold; border-radius: var(--radius) var(--radius) 0 0; }
 .panel > label i { margin-right: 7px; }
